syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.common.metadata";
option java_multiple_files = true;


message CustomDefinition {

  string customType = 1;
  uint32 customSchemaVersion = 2;

  bytes customData = 3;
}
