syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.common.metadata";
option java_multiple_files = true;

import "trac/metadata/type.proto";


enum DataFormat {
    UNKNOWN_FORMAT = 0;
    CSV = 1;
    PARQUET = 2;
}

message FormatSpec {

}

message FieldDefinition {

    string fieldName = 1;
    sint32 fieldOrder = 2;
    BasicType fieldType = 3;
    string fieldLabel = 4;

    bool businessKey = 5;
    bool categorical = 6;

    string formatCode = 7;
    FormatSpec formatSpec = 8;
}

message TableDefinition {

    repeated FieldDefinition field = 1;
}

message DataDefinition {

    TableDefinition schema = 1;

    repeated string storage = 2;
    map<string, Value> storageInfo = 3;

    string path = 4;
    DataFormat format = 5;
}
