syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.common.metadata";
option java_multiple_files = true;

import "trac/metadata/primitive.proto";


enum JobType {
  NOOP_JOB = 0;
  RUN_MODEL = 1;
  RUN_FLOW = 2;
  IMPORT_MODEL = 3;
  IMPORT_DATA = 4;
}

message JobDefinition {

  JobType jobType = 1;

  UUID targetId = 2;

  map<string, PrimitiveValue> param = 3;
  map<string, UUID> input = 4;
  map<string, UUID> output = 5;
  map<string, UUID> model = 6;
}
