syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.common.metadata";
option java_multiple_files = true;

import "trac/metadata/type.proto";
import "trac/metadata/data.proto";


message ModelParameter {

    string label = 1;

    BasicType paramType = 2;

    Value defaultValue = 3;
}

message ModelDefinition {

    string language = 1;
    string repository = 2;
    string repositoryVersion = 3;
    string path = 4;
    string entryPoint = 5;

    map<string, ModelParameter> param = 6;
    map<string, TableDefinition> input = 7;
    map<string, TableDefinition> output = 8;

    bool overlay = 9;
    bool schemaUnchanged = 10;
}
